// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dangling-comments.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
type Foo1 = [/* comment */];

type Foo2 = [
    // comment
];

type Foo3 = [
    // comment1
    // comment2
];

type Foo4 = [
    // comment1

    // comment2
];

type Foo5 = [
    /* comment1 */
];

type Foo6 = [
    /* comment1 */

    /* comment2 */
];


=====================================output=====================================
type Foo1 = [/* comment */];

type Foo2 = [
  // comment
];

type Foo3 = [
  // comment1
  // comment2
];

type Foo4 = [
  // comment1
  // comment2
];

type Foo5 = [/* comment1 */];

type Foo6 = [
  /* comment1 */
  /* comment2 */
];

================================================================================
`;

exports[`dangling-comments.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
type Foo1 = [/* comment */];

type Foo2 = [
    // comment
];

type Foo3 = [
    // comment1
    // comment2
];

type Foo4 = [
    // comment1

    // comment2
];

type Foo5 = [
    /* comment1 */
];

type Foo6 = [
    /* comment1 */

    /* comment2 */
];


=====================================output=====================================
type Foo1 = [/* comment */];

type Foo2 = [
  // comment
];

type Foo3 = [
  // comment1
  // comment2
];

type Foo4 = [
  // comment1
  // comment2
];

type Foo5 = [/* comment1 */];

type Foo6 = [
  /* comment1 */
  /* comment2 */
];

================================================================================
`;

exports[`dangling-comments.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
type Foo1 = [/* comment */];

type Foo2 = [
    // comment
];

type Foo3 = [
    // comment1
    // comment2
];

type Foo4 = [
    // comment1

    // comment2
];

type Foo5 = [
    /* comment1 */
];

type Foo6 = [
    /* comment1 */

    /* comment2 */
];


=====================================output=====================================
type Foo1 = [/* comment */];

type Foo2 = [
  // comment
];

type Foo3 = [
  // comment1
  // comment2
];

type Foo4 = [
  // comment1
  // comment2
];

type Foo5 = [/* comment1 */];

type Foo6 = [
  /* comment1 */
  /* comment2 */
];

================================================================================
`;

exports[`trailing-comma.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    } // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma-for-empty-tuples.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
type Loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong = []

type Foo = Foooooooooooooooooooooooooooooooooooooooooooooooooooooooooo extends [] ? Foo3 : Foo4;
=====================================output=====================================
type Loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong =
  [];

type Foo =
  Foooooooooooooooooooooooooooooooooooooooooooooooooooooooooo extends []
    ? Foo3
    : Foo4;

================================================================================
`;

exports[`trailing-comma-for-empty-tuples.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
type Loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong = []

type Foo = Foooooooooooooooooooooooooooooooooooooooooooooooooooooooooo extends [] ? Foo3 : Foo4;
=====================================output=====================================
type Loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong =
  [];

type Foo =
  Foooooooooooooooooooooooooooooooooooooooooooooooooooooooooo extends []
    ? Foo3
    : Foo4;

================================================================================
`;

exports[`trailing-comma-for-empty-tuples.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
type Loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong = []

type Foo = Foooooooooooooooooooooooooooooooooooooooooooooooooooooooooo extends [] ? Foo3 : Foo4;
=====================================output=====================================
type Loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong =
  [];

type Foo =
  Foooooooooooooooooooooooooooooooooooooooooooooooooooooooooo extends []
    ? Foo3
    : Foo4;

================================================================================
`;

exports[`trailing-comma-trailing-rest.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

=====================================output=====================================
type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[],
];

================================================================================
`;

exports[`trailing-comma-trailing-rest.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

=====================================output=====================================
type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[],
];

================================================================================
`;

exports[`trailing-comma-trailing-rest.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

=====================================output=====================================
type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[]
];

================================================================================
`;

exports[`tuple.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/,
];

================================================================================
`;

exports[`tuple.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/,
];

================================================================================
`;

exports[`tuple.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/
];

================================================================================
`;

exports[`tuple-labeled.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/babel/babel/pull/11754

type T = [x: A, y?: B, ...z: C];

type T = [A, y: B];

let x: [A: string, ...B: number[]]

type T = [foo: string, bar?: number];

type T = [x?: A, y?: B];

type T = [x: A, ...B];

type T = [...B, x: A];

=====================================output=====================================
// https://github.com/babel/babel/pull/11754

type T = [x: A, y?: B, ...z: C];

type T = [A, y: B];

let x: [A: string, ...B: number[]];

type T = [foo: string, bar?: number];

type T = [x?: A, y?: B];

type T = [x: A, ...B];

type T = [...B, x: A];

================================================================================
`;

exports[`tuple-labeled.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/babel/babel/pull/11754

type T = [x: A, y?: B, ...z: C];

type T = [A, y: B];

let x: [A: string, ...B: number[]]

type T = [foo: string, bar?: number];

type T = [x?: A, y?: B];

type T = [x: A, ...B];

type T = [...B, x: A];

=====================================output=====================================
// https://github.com/babel/babel/pull/11754

type T = [x: A, y?: B, ...z: C];

type T = [A, y: B];

let x: [A: string, ...B: number[]];

type T = [foo: string, bar?: number];

type T = [x?: A, y?: B];

type T = [x: A, ...B];

type T = [...B, x: A];

================================================================================
`;

exports[`tuple-labeled.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/babel/babel/pull/11754

type T = [x: A, y?: B, ...z: C];

type T = [A, y: B];

let x: [A: string, ...B: number[]]

type T = [foo: string, bar?: number];

type T = [x?: A, y?: B];

type T = [x: A, ...B];

type T = [...B, x: A];

=====================================output=====================================
// https://github.com/babel/babel/pull/11754

type T = [x: A, y?: B, ...z: C];

type T = [A, y: B];

let x: [A: string, ...B: number[]];

type T = [foo: string, bar?: number];

type T = [x?: A, y?: B];

type T = [x: A, ...B];

type T = [...B, x: A];

================================================================================
`;

exports[`tuple-rest-not-last.ts - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string]

=====================================output=====================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string];

================================================================================
`;

exports[`tuple-rest-not-last.ts - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "es5"
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string]

=====================================output=====================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string];

================================================================================
`;

exports[`tuple-rest-not-last.ts - {"trailingComma":"none"} format 1`] = `
====================================options=====================================
parsers: ["typescript"]
trailingComma: "none"
                                                      printWidth: 80 (default) |
=====================================input======================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string]

=====================================output=====================================
// https://github.com/babel/babel/pull/11753

let x: [...[number, string], string];

================================================================================
`;
